# Omnex

./: .czrc  .dockerignore  .env.example  .env.test  .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOMAIN_CHANGES.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_auth_flow.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md
docs/api-reference/: README.md
docs/getting-started/: README.md
docs/user-guide/: mcp-integration.md
examples/: mcp_client_example.py
migrations/: env.py
migrations/versions/: 001_initial_auth_schema.py
scripts/: download_sample_data.py  init_db.py  init_db.sql  setup.sh  test.sh  verify_setup.py
src/: __init__.py  main.py
src/api/: __init__.py  health.py
src/api/v1/: __init__.py  auth.py  context.py  memory.py
src/core/: __init__.py  auth.py  cache.py  config.py  database.py  logging.py
src/mcp/: __init__.py  server.py
src/services/: auth.py  base.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_auth.py  test_auth_api.py  test_auth_service.py  test_health.py
